--- a/1-github-explorer/package.json
+++ b/1-github-explorer/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
