--- a/ignews/package.json
+++ b/ignews/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.9",
+    "stripe": "^8.211.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "eslint": "8.10.0",
